--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,7 @@
     --cor-botao: #f77b16;
     --cor-de-fundo: #00030C;
     --font-principal: "Inter", sans-serif;
+    --botao-efeito:#faa968
   
 ; 
 }
@@ -154,3 +155,12 @@ body{
     color: var(--cor-textos-pequenos)
 }
 
+.lista__link a:hover{
+    color: var(--cor-botao);
+}
+
+.container__botao:hover{
+    background-color: var(--botao-efeito);
+    color: var(--cor-de-fundo);
+
+}
